[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/UI/DebugMenuPanel.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="DebugMenuPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="colorRectBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0.501961, 0.501961, 0.501961 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="itemList1" type="ItemList" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -130.0
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_selected = Color( 0, 0, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/vseparation = 5
custom_constants/hseparation = 5
custom_styles/selected_focus = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_columns = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="buttonRun" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -40.0
text = "Run"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="labelArg1" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_bottom = 20.0
text = "labelArg1"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lineEditArg1" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 20.0
margin_bottom = 50.0
text = "0"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="labelArg2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 60.0
margin_bottom = 80.0
text = "labelArg2"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lineEditArg2" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 80.0
margin_bottom = 110.0
text = "0"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="labelArg3" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 120.0
margin_bottom = 140.0
text = "labelArg3"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lineEditArg3" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 140.0
margin_bottom = 170.0
text = "0"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="labelArg4" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 180.0
margin_bottom = 200.0
text = "labelArg4"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lineEditArg4" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 200.0
margin_bottom = 230.0
text = "0"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="labelArg5" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 240.0
margin_bottom = 260.0
text = "labelArg5"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lineEditArg5" type="LineEdit" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 260.0
margin_bottom = 290.0
text = "0"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="itemList1" to="." method="_on_itemList1_item_selected"]
[connection signal="pressed" from="buttonRun" to="." method="_on_buttonRun_pressed"]
